full menu navigation from stamtavler too tree view complete

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-backgroundWhite">
+<html lang="nb" class="bg-backgroundWhite">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Avlr"
+      content="Avlr, platform for enkel stambokføring av dyr med god oversikt!"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -16,7 +16,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Avlr - Hold oversikt</title>
   </head>
   <body class="h-full w-full overflow-y-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
