Landing Page created

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Avlr - Hold oversikt</title>
   </head>
-  <body class="h-full w-full overflow-y-hidden">
+  <body class="h-full w-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full w-full"></div>
   </body>
